--- a/Project_Mbrito_Corretora.ipynb
+++ b/Project_Mbrito_Corretora.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Project_Mbrito_Corretora.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZ4Y/cws+rkaPLhxkq5ACt",
+      "authorship_tag": "ABX9TyNI7PaFn+wqUvfJTtFYo9XE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,9 @@
       "source": [
         "## Aprendizado\n",
         "\n",
-        "Para solucionar o problema de negócio, foi preciso adiquirir o conhecimento de algumas técnicas, desde o modelo de classificação como o XGboost, a métrica de Gini Coefficient e técnicas de tratamento de dados desbalanceados como o undersampling. "
+        "Esse projeto teve o intuito principal de auxiliar no aprendizado sobre a utilização de machine learning na análise de risco do seguro automóvel.\n",
+        "\n",
+        "Para solucionar o problema de negócio, foi preciso adquirir o conhecimento de algumas técnicas, desde o modelo de classificação como o XGboost, a métrica de Gini Coefficient e técnicas de tratamento de dados desbalanceados como o undersampling. "
       ]
     },
     {
